global change text

--- a/crypto-b/templates/careers.html
+++ b/crypto-b/templates/careers.html
@@ -15,21 +15,21 @@
           <div class="page-header__flex">
             <div class="page-header__logo">
               <a href="../index.html">
-                <img class="page-header__logo" src="../img/logo.png" alt="plus500crypto">
-                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="plus500crypto"> -->
+                <img class="page-header__logo" src="../img/logo.png" alt="+500crypto">
+                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="+500crypto"> -->
               </a>
             </div>
             <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/login">Login</a></li>
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/login">Login</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/register/real/">Sign Up</a></li>
                 <li class="page-header__item"><a href="contact.html">Contacts</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/login">Login</a></li>
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/login">Login</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/register/real/">Sign Up</a></li>
                 <li class="page-header__item"><a href="contact.html">Contacts</a></li>
               </ul>
             </div>
@@ -40,24 +40,24 @@
     <div class="container">
       <div class="page-header__rules">
         <h1>Careers</h1>
-        <p>At Plus500crypto our team consist of many enthusiastic individuals with a high sense of responsibility; no one waits around to be told what to do. Each member of our team is a highly motivated self-starter that is comfortable with autonomy and believes in lifelong learning. In other words, when we’re not working, we’re dreaming about it. We place our egos aside and thrive within a culture that fosters one another from birth of a concept to launch of a product.</p>
-        <p>Plus500crypto is an international company with lots of team members globally distributed. We know the importance of communication, so our team is in constant contact with one another to develop, support, and deliver what is expected of us from our customers.</p>
-        <p>Our core values include</p>
+        <p>At +500crypto our team consists of many enthusiastic individuals with a high sense of responsibility; no one waits around to be told what to do. Each member of our team is a highly motivated self-starter that is comfortable with autonomy and believes in lifelong learning. In other words, when we’re not working, we’re dreaming about it. We place our egos aside and thrive within a culture that fosters one another from the birth of a concept to launch a product.</p>
+        <p>+500crypto is an international company with lots of team members globally distributed. We know the importance of communication, so our team is in constant contact with one another to develop, support, and deliver what is expected of us from our customers.</p>
+        <p>Our core values include:</p>
         <ul>
-          <li>sense of ownership</li>
+          <li>a sense of ownership</li>
           <li>our passion for our work</li>
           <li>we are a team player</li>
           <li>positivity and a high level of optimism</li>
           <li>high level of performance</li>
-          <li>community oriented</li>
+          <li>community oriented.</li>
         </ul>
-        <p>The work we do at Plus500crypto creates an opportunity to personally contribute to the market evolution of cryptocurrencies and influence many people around. This is a very big opportunity. One any diligent and smart individual will want to cling to. At Plus500crypto our number goal is to find talented, vibrant and dedicated young individuals looking to join our amazing team and achieve exploits together.</p><br>
+        <p>The work we do at +500crypto creates an opportunity to personally contribute to the market evolution of cryptocurrencies and influence many people around. This is a very big opportunity. One any diligent and smart individual will want to cling to. At +500crypto our number goal is to find talented, vibrant and dedicated young individuals looking to join our amazing team and achieve exploits together.</p><br>
         <h2>1. Senior software developer</h2>
-          <p>At Plus500crypto we are on a mission to establish the topmost innovative and industry-leading cryptocurrencies exchange. our team is comprised of many energetic young individuals that are self-driven and motivated towards innovation and execution of lots of ideas and tasks with speed and accuracy.</p>
+          <p>At +500crypto we are on a mission to establish the topmost innovative and industry-leading cryptocurrencies exchange. our team is comprised of many energetic young individuals that are self-driven and motivated towards innovation and execution of lots of ideas and tasks with speed and accuracy.</p>
           <h3>Responsibilities</h3>
-          <p>As an Engineer with Plus500crypto you’ll be a principal member of the team that builds the  Plus500crypto core platform: that is, the trading engine, data analysis algorithms, API, wallet management, 3rd party integrations, etc.</p>
+          <p>As an Engineer with +500crypto you’ll be a principal member of the team that builds the  +500crypto core platform: that is, the trading engine, data analysis algorithms, API, wallet management, 3rd party integrations, etc.</p>
           <ul>
-            <li><b>The Architecture:</b> Plus500crypto backend is built with the micro-services architecture in mind. Redundancy and high availability are main factors and lead every choice made to design each piece on the platform.</li>
+            <li><b>The Architecture:</b> +500crypto backend is built with the micro-services architecture in mind. Redundancy and high availability are main factors and lead every choice made to design each piece on the platform.</li>
             <li><b>Trading engine:</b> best in class trading engine across all trading and crypto exchanges. Contribute to design, new order types development, performance tuning and research.</li>
             <li><b>Data analysis algorithms:</b> the data we present to our users is the result of tailored algorithms on top of the incredible amount of data our platform produces daily.</li>
             <li><b>APIs:</b> the public face the presents the complexity of our architecture in a clean interface. Design, develop and improve trading and account management APIs on top of Web Sockets, REST and custom high-performance protocol.</li>
@@ -73,13 +73,13 @@
             <li>Preferred technologies: Ruby, Node.js, MySQL, Redis, Websockets</li>
             <li>Other technologies of interest: Message queues (ZeroMQ, RabbitMQ), Job Queues</li>
           </ul>
-          <p>As many that meets the requirement and Interested in this position? Please us an email and introduce yourself, explaining what position you are interested in and why you think you are a good fit.</p><br>
+          <p>As many that meets the requirement and interested in this position? Please send us an email and introduce yourself, explaining what position you are interested in and why you think you are a good fit.</p><br>
         <h2>2. General manager – Europe region</h2>
-          <p>At Plus500crypto we are on a mission to establish the topmost innovative and industry-leading cryptocurrencies exchange. our team is comprised of many energetic young individuals that are self-driven and motivated towards innovation and execution of lots of ideas and tasks with speed and accuracy.</p>
+          <p>At +500crypto we are on a mission to establish the topmost innovative and industry-leading cryptocurrencies exchange. our team is comprised of many energetic young individuals that are self-driven and motivated towards innovation and execution of lots of ideas and tasks with speed and accuracy.</p>
           <h3>Responsibilities</h3>
           <ul>
             <li>Take ownership of the Europe region and drive market leadership & success</li>
-            <li>Shape regional Plus500crypto strategy through industry & competitor analysis</li>
+            <li>Shape regional +500crypto strategy through industry & competitor analysis</li>
             <li>Own and shape the product for the region</li>
             <li>Help co-ordinate regional marketing campaigns</li>
             <li>Develop and maintain relationships with key stakeholders in market - regulators, partners, banks, merchants, media</li>
@@ -98,12 +98,12 @@
             <li>Preferably a basic knowledge of how crypto-currencies like Bitcoin work</li>
           </ul><br>
         <h2>3. Fraud Analyst</h2>
-          <p>At Plus500crypto we are on a mission to establish the topmost innovative and industry-leading cryptocurrencies exchange. our team is comprised of many energetic young individuals that are self-driven and motivated towards innovation and execution of lots of ideas and tasks with speed and accuracy.</p>
+          <p>At +500crypto we are on a mission to establish the topmost innovative and industry-leading cryptocurrencies exchange. our team is comprised of many energetic young individuals that are self-driven and motivated towards innovation and execution of lots of ideas and tasks with speed and accuracy.</p>
           <h3>Responsibilities</h3> 
           <ul>
-            <li>Support Plus500crypto fraud prevention efforts across multiple geographies</li>
+            <li>Support +500crypto fraud prevention efforts across multiple geographies</li>
             <li>Play a key role in the continuous development and monitoring of the fraud prevention functions</li>
-            <li>Perform market analysis and detailed investigations on high risk accounts or transactions</li>
+            <li>Perform market analysis and detailed investigations of high-risk accounts or transactions</li>
             <li>Analyze company data by grouping and analyzing the fraudulent cases</li>
             <li>Analyze the processes and provide suggestions on how to reduce the proportion of fraudulent transactions</li>
             <li>Prepare monthly and ad-hoc reports to management</li>
@@ -129,8 +129,8 @@
         <div class="page-footer__column">
           <b>Account</b>
           <ul>
-            <li><a href="https://client.plus500crypto.com/en/members/login">Sign In</a></li>
-            <li><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
+            <li><a href="https://client.+500crypto.com/en/members/login">Sign In</a></li>
+            <li><a href="https://client.+500crypto.com/en/members/register/real/">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
@@ -154,8 +154,7 @@
           </ul>
         </div>
       </div>
-      <p class="page-footer__copyright">© Copyright 2017 +500crypto, All right reserved. +500crypto is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, 2027 Nicosia, Cyprus<br><br>+500crypto is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange.
-Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>
+      <p class="page-footer__copyright">© Copyright 2017 +500crypto, All right reserved. +500crypto is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, 2027 Nicosia, Cyprus<br><br>+500crypto is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange. Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>
     </div>
   </footer>
 </body>
