--- a/crypto-b/templates/security.html
+++ b/crypto-b/templates/security.html
@@ -15,21 +15,21 @@
           <div class="page-header__flex">
             <div class="page-header__logo">
               <a href="../index.html">
-                <img class="page-header__logo" src="../img/logo.png" alt="plus500crypto">
-                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="plus500crypto"> -->
+                <img class="page-header__logo" src="../img/logo.png" alt="+500crypto">
+                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="+500crypto"> -->
               </a>
             </div>
             <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/login">Login</a></li>
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/login">Login</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/register/real/">Sign Up</a></li>
                 <li class="page-header__item"><a href="contact.html">Contacts</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/login">Login</a></li>
-                <li class="page-header__item"><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/login">Login</a></li>
+                <li class="page-header__item"><a href="https://client.+500crypto.com/en/members/register/real/">Sign Up</a></li>
                 <li class="page-header__item"><a href="contact.html">Contacts</a></li>
               </ul>
             </div>
@@ -42,13 +42,13 @@
         <h1>Security</h1>
         <b>Cryptocurrency storage</b>
         <p>Deep tight storage:<br>A large number of our customer's Bitcoin funds are kept and stored what we call “deep and tight storage”. These are wallets with multi-signatures and they all have private keys kept in secured bank vaults. There is no more than one person that has access or controls more than one key. Spending any cryptocurrency from deep tight storage will require a well and careful and specific efforts with numerous layers of encryption and coding. So also, the wallet backups are saved in various encrypted formats.</p>
-        <p>Secured wallet:<br>Plus500crypto has a multi-signature wallet to enhance very quick cryptocurrency withdrawals. One out of the two keys are controlled my us, and the other is held by a multi-signature custodian leader. This method was adopted to ensure the wallet is always secured. Because anybody that tries to hack any wallet will have to compromise both accounts and that is practically impossible to do.</p>
+        <p>Secured wallet:<br>+500crypto has a multi-signature wallet to enhance very quick cryptocurrency withdrawals. One out of the two keys are controlled by us, and the other is held by a multi-signature custodian leader. This method was adopted to ensure the wallet is always secured. Because anybody that tries to hack any wallet will have to compromise both accounts and that is practically impossible to do.</p>
         <b>Authentication</b>
-        <p>Password:<br>Passwords used on Plus500crypto are saved and stored in hashed forms. You alone have every access to your password. We try a s much as possible to make sure our clients use very strong passwords on signing up. We also advise the use of last pass, keychain or any good password saver.</p>
-        <p>Two factor authentications:<br>The two-factor authentication is designed to give a higher and advanced level of authentication and to guarantee rest of mind to the customers not having anything to worry about be it funds or relevant personal information. With these options enabled, you give your account another layer of security by generating a one-time password to your smart phone or devices.</p>
+        <p>Password:<br>Passwords used on +500crypto are saved and stored in hashed forms. You alone have every access to your password. We try as much as possible to make sure our clients use very strong passwords for signing up. We also advise the use of last pass, keychain or any good password saver.</p>
+        <p>Two-factor authentications:<br>The two-factor authentication is designed to give a higher and advanced level of authentication and to guarantee rest of mind to the customers not having anything to worry about be it funds or relevant personal information. With these options enabled, you give your account another layer of security by generating a one-time password to your smartphone or devices.</p>
         <b>Company security principles</b>
-        <p>Site, service and staff:<br>All the services at Plus500crypto and communications happens over SSL-secured ports. The wallets are secured using the PGP encryption codes. It’s practically impossible for a single individual to have direct access to customer's funds. Financial and security auditing makes sure the various funds are 100% safe. Plus500crypto runs a background check on all personnel and workers to ensure efficiency and trust between us and our customers.</p>
-        <p class="page-header--pb">Personal information:<br>All personally identifiable information such as names, ID numbers and identity documents scan copy are tightly encrypted, secured and saved in a good location. The access to this information are strictly on a need-to-know basis.</p>
+        <p>Site, service, and staff:<br>All the services at +500crypto and communications happen over SSL-secured ports. The wallets are secured using the PGP encryption codes. It’s practically impossible for a single individual to have direct access to customer's funds. Financial and security auditing makes sure the various funds are 100% safe. +500crypto runs a background check on all personnel and workers to ensure efficiency and trust between us and our customers.</p>
+        <p class="page-header--pb">Personal information:<br>All personally identifiable information such as names, ID numbers, and identity documents scan copy are tightly encrypted, secured and saved in a good location. The access to this information is strictly on a need-to-know basis.</p>
       </div>
     </div>
   </header>
@@ -58,8 +58,8 @@
         <div class="page-footer__column">
           <b>Account</b>
           <ul>
-            <li><a href="https://client.plus500crypto.com/en/members/login">Sign In</a></li>
-            <li><a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></li>
+            <li><a href="https://client.+500crypto.com/en/members/login">Sign In</a></li>
+            <li><a href="https://client.+500crypto.com/en/members/register/real/">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
@@ -83,8 +83,7 @@
           </ul>
         </div>
       </div>
-      <p class="page-footer__copyright">© Copyright 2017 +500crypto, All right reserved. +500crypto is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, 2027 Nicosia, Cyprus<br><br>+500crypto is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange.
-Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>
+      <p class="page-footer__copyright">© Copyright 2017 +500crypto, All right reserved. +500crypto is a property of GRANIT OAK WORLDWIDE LIMITED: Igoumenitsas 12, 2027 Nicosia, Cyprus. Operational address: Igoumenitsas 12, 2027 Nicosia, Cyprus<br><br>+500crypto is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Exodus. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange. Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>
     </div>
   </footer>
 </body>
