--- a/crypto-b/templates/login.html
+++ b/crypto-b/templates/login.html
@@ -15,8 +15,8 @@
           <div class="page-header__flex  page-header__flex--center">
             <div class="page-header__logo">
               <a href="../index.html">
-                <img class="page-header__logo" src="../img/logo.png" alt="plus500crypto">
-                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="plus500crypto"> -->
+                <img class="page-header__logo" src="../img/logo.png" alt="+500crypto">
+                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="+500crypto"> -->
               </a>
             </div>
           </div>
@@ -35,7 +35,7 @@
               <label for="check">Remember me</label>
             </div>
             <input type="submit" value="Sign In">
-            <p>New user? <a href="https://client.plus500crypto.com/en/members/register/real/">Sign Up</a></p>
+            <p>New user? <a href="https://client.+500crypto.com/en/members/register/real/">Sign Up</a></p>
           </form>
         </div>
       </div>
