--- a/crypto-b/templates/registration.html
+++ b/crypto-b/templates/registration.html
@@ -15,8 +15,8 @@
           <div class="page-header__flex  page-header__flex--center">
             <div class="page-header__logo">
               <a href="../index.html">
-                <img class="page-header__logo" src="../img/logo.png" alt="plus500crypto">
-                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="plus500crypto"> -->
+                <img class="page-header__logo" src="../img/logo.png" alt="+500crypto">
+                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="+500crypto"> -->
               </a>
             </div>
           </div>
