--- a/crypto-b/sass/blocks/trade.scss
+++ b/crypto-b/sass/blocks/trade.scss
@@ -15,14 +15,14 @@
 }
 
 .trade__left-column {
-  width: 800px;
+  width: 40%;
   font-size: 25px;
   font-weight: bold;
   text-transform: uppercase;
 }
 
 .trade__right-column {
-  width: 900px;
+  width: 60%;
   font-size: 25px;
 }
 
@@ -77,11 +77,13 @@
 @media only screen and (min-width: 768px) and (max-width: 1024px) {  
   .trade__left-column {
     align-self: center;
+    // width: 45%;
     font-size: 25px;
   }
   
   .trade__right-column {
     align-self: center;
+    // width: 45%;
     font-size: 20px;
   }
 }
