--- a/crypto-b/templates/login.html
+++ b/crypto-b/templates/login.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Registration - +500crypto</title>
+  <title>Login - +500crypto</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -16,7 +16,6 @@
             <div class="page-header__logo">
               <a href="../index.html">
                 <img class="page-header__logo" src="../img/logo.png" alt="+500crypto">
-                <!-- <img class="page-header__logo-s" src="../img/logo-s.png" alt="+500crypto"> -->
               </a>
             </div>
           </div>
