--- a/forex/templates/product-specification.html
+++ b/forex/templates/product-specification.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Product Specification - Forex 24</title>
-  <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
-  <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -68,41 +66,54 @@
         <button class="tab__link  commodities" onclick="openTab(event, 'Commodities')">Commodities</button>
         <button class="tab__link  metals" onclick="openTab(event, 'Precious Metals')">Precious Metals</button>
         <button class="tab__link  bonds" onclick="openTab(event, 'Bonds')">Bonds</button>
-        <button class="tab__link  indices" onclick="openTab(event, 'Indices')">Indices</button>
-        <button class="tab__link  indices-f" onclick="openTab(event, 'IndicesF')">Indices-F</button>
+        <button class="tab__link  indices-c" onclick="openTab(event, 'Indices Cash')">Indices Cash</button>
+        <button class="tab__link  indices-f" onclick="openTab(event, 'Indices Future')">Indices Future</button>
         <button class="tab__link  stocks" onclick="openTab(event, 'Stocks')">Stocks</button>
       </div>
       <div id="Forex" class="tab__content  tab__content--forex">
         <div class="tab__origin">
           <h3>Forex</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>Foreign exchange or Forex is one of the largest and most liquid markets with over 5 trillion dollars traded daily. A trader can trade currencies against each other and based on the changing values of currencies over time he can make a profit or a loss. Exchange rates are defined by the market forces of supply and demand and are affected by geopolitical and economic events around the globe. With Forex24:</p>
+          <ul>
+            <li>You can trade 60+ currency pairs: majors, minors and exotics</li>
+            <li>You get direct access to the forex market 24 hours a day, 5 days a week</li>
+            <li>Leverage up to 400:1</li>
+            <li>Low spreads and No re-quotes</li>
+            <li>No hidden fees</li>
+          </ul>
         </div>
       </div>
       <div id="Commodities" class="tab__content  tab__content--commodities">
         <div class="tab__originc">
           <h3>Commodities</h3>
-          <p>Lorem ipsum dolor sit amet.</p> 
+          <p>Commodity markets have had a major impact on nations and people throughout history. Currently there are about 50 major commodity markets worldwide that facilitate trading of approximately 100 raw or primary products. There are different categories of commodities, all supported by the same basic economic principles: lower supply equals higher prices and vice versa.</p> 
+          <p>At Forex24 you can trade up to 10 CFDs on Commodities such as Crude Oil, Natural Gas, Corn, Rice and Sugar with very favourable terms.</p>
         </div>
       </div>
       <div id="Precious Metals" class="tab__content  tab__content--metals">
         <h3>Precious Metals</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Metals are physical commodities and they have always played an important role in history and will continue to be valued. Metals such as Gold and Silver have been recognized as valuable assets and have always been a very popular choice of investing. Precious metals, especially Gold has always been referred to as ‘Safe Heaven’ in times of economic uncertainty.</p>
+        <p>Forex24 offers investors, who do not want to face economic turbulence, access to three types of metals: Gold, Silver and Palladium.</p>
       </div>
       <div id="Bonds" class="tab__content  tab__content--bonds">
         <h3>Bonds</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Bonds are one of the oldest types of financial instruments in the world and their value is often defined by global events. Trading bonds for the long term is considered a conservative investment. Bonds offer an outstanding opportunity to differentiate your portfolio and hedge against risk. For many investors, it makes sense to have at least part of their portfolio invested in bonds.</p>
+        <p>Forex24 clients have the access to trade 2 bond futures through contract for difference.</p>
       </div>
-      <div id="Indices" class="tab__content  tab__content--indices">
+      <div id="Indices Cash" class="tab__content  tab__content--indices-c">
         <h3>Indices</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p>An index is a statistical representation of an equity market through a basket of stocks. An index measures the value of a group of stocks and therefore investors can invest on indices that represent specific markets.</p>
+        <p>With Forex24 you can trade more than 10 of the world’s most prolific indices covering Asia, North America and Europe, including the renowned Dow Jones Industrial Average (DJIA) which is extremely popular with traders worldwide.</p>
       </div>
-      <div id="IndicesF" class="tab__content  tab__content--indices-f">
-        <h3>IndicesF</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
+      <div id="Indices Future" class="tab__content  tab__content--indices-f">
+        <h3>Indices</h3>
+        <p>An index is a statistical representation of an equity market through a basket of stocks. An index measures the value of a group of stocks and therefore investors can invest on indices that represent specific markets.</p>
+        <p>With Forex24 you can trade more than 10 of the world’s most prolific indices covering Asia, North America and Europe, including the renowned Dow Jones Industrial Average (DJIA) which is extremely popular with traders worldwide.</p>
       </div>
       <div id="Stocks" class="tab__content  tab__content--stocks">
         <h3>Stocks</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Stocks or Equities belong to one of the major asset classes. Stocks are significant as they stand for the real value of one’s stake in a corporation listed in a stock exchange.</p>
+        <p>At Forex24 you can trade 84+ Stock CFDs that are traded in world major equity markets, such as Apple, Microsoft, Alibaba and Amazon.</p>
       </div>
     </div>
   </section>
